# ft-job-alerts

./: .env.example  .gitignore  README.md  all_code_extract.txt  pyproject.toml  run.py  run_gui.py
data/: communes_alias.json  profiles.json
data/samples/: offres_sample.json
data/samples/offres_detail/: OFFER123.json  OFFER456.json
src/ft_job_alerts/: auth.py  charts.py  cli.py  cli_utils.py  clients.py  config.py  exporter.py  filters.py  geocode.py  gui.py  nlp.py  normalizer.py  notifier.py  profiles.py  salary.py  scoring.py  storage.py  tags.py
